fix: #25335 Lower header z-index under lightboxes' one

--- a/css/layouts/_pages-layouts.scss
+++ b/css/layouts/_pages-layouts.scss
@@ -19,7 +19,7 @@ header.main {
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 100000;
+    z-index: 9000;
     width: 100%;
 }
 .container {
